report posts shows after liking post bug fixed

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                 <div id="reported-posts"></div>
             </div>
         </main>
-        <section class="text-center text-white mt-5 mb-0 py-5 bg-dark">
+        <section class="text-center text-white mt-5 mb-0 p-5 bg-dark">
             <h3 class="my-5"><b>Questions and answers</b></h3>
             <h5>1.How does javascript works?</h5>
             <p>
                 <strong>Ans:</strong>
-                when we run the javascript code using browser or server it need to convert the code in machine language to show us the output in browser. Because our machines(desktops, laptops, phones, etc) are unable to read other languages. Different browsers or servers use different engines to convert this javascript code into machine language. Such as , Google Chrome uses V8 engine, Firefox uses SpiderMonkey, Safari uses JavaScriptCore, Internet Explorer uses Chakra. Different browser uses different engines but they all follow ECMAScript stranderd. So, javascript code send to browser or server then the browser or server compile it using their specfic engine and then send it to our machine and at the end point it runs and shows us the output.
+                When we run the javascript code using browser or server it need to convert the code in machine language to show us the output. Because our machines(desktops, laptops, phones, etc) are unable to read other languages. Different browsers or servers use different engines to convert javascript code into machine language. Such as , Google Chrome uses V8 engine, Firefox uses SpiderMonkey, Safari uses JavaScriptCore, Internet Explorer uses Chakra. Different browser uses different engines but they all follow ECMAScript stranderd. So, javascript code send to browser or server then the browser or server compile it using their specfic engine and then send it to our machine and then it runs and shows us the output.
             </p>
 
             <h5>2.What does javascript event loop do?</h5>
