--- a/index.html
+++ b/index.html
@@ -81,17 +81,19 @@
         </main>
         <section class="text-center text-white mt-5 mb-0 p-5 bg-dark">
             <h3 class="my-5"><b>Questions and answers</b></h3>
-            <h5>1.How does javascript works?</h5>
+            <h5>1.How does javascript work?</h5>
             <p>
-                <strong>Ans:</strong>
-                When we run the javascript code using browser or server it need to convert the code in machine language to show us the output. Because our machines(desktops, laptops, phones, etc) are unable to read other languages. Different browsers or servers use different engines to convert javascript code into machine language. Such as , Google Chrome uses V8 engine, Firefox uses SpiderMonkey, Safari uses JavaScriptCore, Internet Explorer uses Chakra. Different browser uses different engines but they all follow ECMAScript stranderd. So, javascript code send to browser or server then the browser or server compile it using their specfic engine and then send it to our machine and then it runs and shows us the output.
+                <strong>Ans:</strong> 
+                When we run the javascript code using browser or server it need to convert the code in machine language to show us the output. Because our machines(desktops, laptops, phones, etc) are unable to read other languages. Different browsers or servers use different engines to convert javascript code into machine language. Such as , Google Chrome uses V8 engine, Node js also uses V8 engine, Firefox uses SpiderMonkey, Safari uses JavaScriptCore, Internet Explorer uses Chakra. Different browser uses different engines but they all follow ECMAScript stranderd. This engines convert javascript code to machine language using interprator and compiler. So, javascript code send to browser or server then the browser or server compile it using their specfic engine and then send it to our machine and then it runs and shows us the output.
             </p>
 
             <h5>2.What does javascript event loop do?</h5>
             <p><strong>Ans:</strong></p>
             
             <h5>3.Difference between local storage and session storage?</h5>
-            <p><strong>Ans:</strong></p>
+            <p>
+                <strong>Ans:</strong> 
+                Local storage is browsers local storage and session storage is tab base storage. Local storage capacity is more than session storage. Local storage can be accessible in all tabs but session storage can only access within that tab. Local storage data are needed to clean or erased, closing tab or browser will not erase data but just by closing tab session storage data will be erased. Local storage is use to store data for long time but session storage data is used for short period of time.</p>
         </section>
         <footer></footer>
 
